# Learning-Qt6

./: .gitignore  CMakeLists.txt  Qt6_MetaObject_System_Guide.md  README.md
.kiro/specs/qt-event-system/: design.md  requirements.md  tasks.md
.kiro/specs/ui-layout-optimization/: requirements.md
01_metaobject_system/: Qt6_MetaObject_System_Guide.md  README.md
01_metaobject_system/src/: company.cpp  company.h  demo_runner.h  main.cpp  person.h
02_event_system/: CMakeLists.txt  CODE_QUALITY_REPORT.md  FINAL_VERIFICATION_REPORT.md  LEARNING_GUIDE.md  Qt6_Event_System_Guide.md  Qt6_Event_System_Guide_Part2.md  Qt6_Event_System_Guide_Part3.md  Qt6_Event_System_Guide_Part4.md  README.md  TROUBLESHOOTING.md  integration_verification.cpp  simple_integration_test.cpp  test_runner.cpp
02_event_system/src/: main.cpp
02_event_system/src/core/: custom_events.cpp  custom_events.h  event_logger.cpp  event_logger.h  event_manager.cpp  event_manager.h  event_performance_analyzer.cpp  event_performance_analyzer.h  object_hierarchy_model.cpp  object_hierarchy_model.h
02_event_system/src/examples/advanced_patterns/: README.md  advanced_patterns_demo.cpp  advanced_patterns_demo.h  event_compression_demo.cpp  event_compression_demo.h  event_pooling_demo.cpp  event_pooling_demo.h
02_event_system/src/examples/basic_events/: README.md  basic_event_widget.cpp  basic_event_widget.h  event_type_demo.cpp  event_type_demo.h
02_event_system/src/examples/custom_events/: README.md  custom_event_demo.cpp  custom_event_demo.h  custom_event_receiver.cpp  custom_event_receiver.h  custom_event_sender.cpp  custom_event_sender.h
02_event_system/src/examples/event_filters/: README.md  event_modification_demo.cpp  event_modification_demo.h  global_event_filter.cpp  global_event_filter.h  selective_event_filter.cpp  selective_event_filter.h
02_event_system/src/examples/event_propagation/: README.md  event_interception_demo.cpp  event_interception_demo.h  event_propagation_chain.cpp  event_propagation_chain.h  parent_child_event_demo.cpp  parent_child_event_demo.h
02_event_system/src/examples/mouse_keyboard/: README.md  interaction_demo.cpp  interaction_demo.h  keyboard_event_widget.cpp  keyboard_event_widget.h  mouse_event_widget.cpp  mouse_event_widget.h
02_event_system/src/tests/: test_basic_events.cpp  test_basic_events.h  test_event_logger.cpp  test_event_logger.h  test_mouse_keyboard.cpp  test_mouse_keyboard.h
02_event_system/src/widgets/: debug_panel_widget.cpp  debug_panel_widget.h  event_display_widget.cpp  event_display_widget.h  interactive_area_widget.cpp  interactive_area_widget.h  main_window.cpp  main_window.h  performance_monitor_widget.cpp  performance_monitor_widget.h
src/: company.cpp  demo_runner.cpp  person.cpp
